--- a/TodoList/Web.config
+++ b/TodoList/Web.config
@@ -15,6 +15,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <trace enabled="true" requestLimit="40" localOnly="false" />
   </system.web>
 
   <connectionStrings>
