--- a/DevProject/App.config
+++ b/DevProject/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TodoListEntities" connectionString="metadata=res://*/TaskListModel.csdl|res://*/TaskListModel.ssdl|res://*/TaskListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DRUD\ZAZSQLSERVER;initial catalog=TodoList;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TodoListEntities" connectionString="metadata=res://*/TodoListModel.csdl|res://*/TodoListModel.ssdl|res://*/TodoListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DRUD\ZAZSQLSERVER;initial catalog=TodoList;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
