--- a/TodoList/Web.config
+++ b/TodoList/Web.config
@@ -10,16 +10,19 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  
+
 
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <trace enabled="true" requestLimit="40" localOnly="false" />
+    <authentication mode="Forms">
+
+    </authentication>
   </system.web>
 
   <connectionStrings>
-    <add name="TodoListEntities" connectionString="metadata=res://*/TaskListModel.csdl|res://*/TaskListModel.ssdl|res://*/TaskListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DRUD\ZAZSQLSERVER;initial catalog=TodoList;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TodoListEntities" connectionString="metadata=res://*/TodoListModel.csdl|res://*/TodoListModel.ssdl|res://*/TodoListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DRUD\ZAZSQLSERVER;initial catalog=TodoList;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -31,19 +34,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <!--<system.web>
-    <webServices>
-      <protocols>
-        <clear/>
-      </protocols>
-    </webServices>
-    <httpHandlers>
-      <remove verb="*" path="*.asmx"/>
-      <add verb="*" path="*.asmx"
-        type="System.Web.Script.Services.ScriptHandlerFactory"
-         validate="false"/>
-    </httpHandlers>
-  </system.web>-->
+
 </configuration>
 
 
