--- a/TodoList/Web.config
+++ b/TodoList/Web.config
@@ -16,10 +16,30 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <trace enabled="true" requestLimit="40" localOnly="false" />
-    <authentication mode="Forms">
-
+    <authentication mode="Forms" >
+      <forms name="main" loginUrl="~/Login.aspx" />
     </authentication>
+    <authorization>
+      <deny users="?" />
+    </authorization>
   </system.web>
+
+  <location path="Register.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="User/Users.aspx">
+    <system.web>
+      <authorization>
+        <allow roles="admin"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
 
   <connectionStrings>
     <add name="TodoListEntities" connectionString="metadata=res://*/TodoListModel.csdl|res://*/TodoListModel.ssdl|res://*/TodoListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DRUD\ZAZSQLSERVER;initial catalog=TodoList;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
